# convoy

./: Cargo.toml  LICENSE  README.md
examples/: kafka_consumer_default_handler.rs  kafka_produce_consume.rs  kafka_produce_consume_avro.rs  kafka_produce_consume_raw.rs
src/: codec.rs  consumer.rs  kafka.rs  lib.rs  message.rs  message_bus.rs  producer.rs  utils.rs
src/codec/: json.rs  mod.rs
src/codec/avro/: mod.rs  registry.rs
src/consumer/: context.rs  extension.rs  extract.rs  handler.rs  hook.rs  message_bus.rs  router.rs  sentinel.rs  task_local.rs  worker.rs
src/integration/: kafka.rs
src/integration/kafka/: consumer.rs  producer.rs
src/integration/kafka/consumer/: bus.rs  extractor.rs
src/producer/: hook.rs
tests/: avro_registry.rs  in_memory_pipe.rs  otel_context_propagation.rs
tests/in_memory/: mod.rs
tests/otel/: mod.rs
tests/schema/: mod.rs
