[package]
name = "convoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kafka"]
kafka = ["rdkafka"]

[dependencies]
async-trait = "0.1.72"
futures-lite = "1.13.0"
murmur2 = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.174", features = ["derive", "alloc"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }

rdkafka = { version = "0.33", optional = true }
