[package]
name = "convoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kafka"]
kafka = ["dep:rdkafka"]
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
unstable-features = []

[dependencies]
async-trait = "0.1"
futures-lite = "1"
rand = "0.8"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
    "rt-multi-thread",
] }
tracing = { version = "0.1", features = ["log"] }

rdkafka = { version = "0.33", optional = true }
opentelemetry = { version = "0.19", optional = true }
tracing-opentelemetry = { version = "0.19", optional = true }
tracing-subscriber = "0.3.17"
ahash = "0.8.3"

[dev-dependencies]
fake = { version = "2", features = ["derive"] }
opentelemetry-otlp = "0.12"
opentelemetry = { version = "0.19", features = ["rt-tokio", "trace"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
