[package]
name = "convoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kafka"]
kafka = ["dep:rdkafka"]
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
unstable-features = []

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
    "rt-multi-thread",
] }
async-trait = "0.1"
futures-lite = "1"
rand = "0.8"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
ahash = "0.8"
hex = "0.4"

# integrations
rdkafka = { version = "0.29.0", optional = true }
opentelemetry = { version = "0.19", optional = true }
tracing-opentelemetry = { version = "0.19", optional = true }

[dev-dependencies]
fake = { version = "2", features = ["derive"] }
opentelemetry-otlp = "0.12"
opentelemetry = { version = "0.19", features = ["rt-tokio", "trace"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
